# Budgetter

./: .gitignore  .sonarcloud.properties  README.md  budgetter.pro  main.py  pylintrc  pyproject.toml  requirements.txt  setup.py  utils.py
.github/workflows/: analysis.yml  main.yml  pylint.yml
budgetter/: main.py
budgetter/controller/: controller.py
budgetter/models/: accounts_model.py  distribution_model.py  transactions_model.py
budgetter/services/: dashboard.py
budgetter/utils/: category_predictor.py  defines.py  ofxtools.py  pyside_uic.py  rest_client.py  tools.py
budgetter/view/panels/: graphs.py  home.py  menu_view.py
budgetter/view/resources/: resources.qrc  resources_rc.py
budgetter/view/skeletons/: Account.py  Account.ui  AddAccount.py  AddAccount.ui  AddBank.py  AddBank.ui  AddTransaction.py  AddTransaction.ui  ColorPicker.py  (+13 more)
budgetter/worker/: rest_client.py  web_socket.py  worker.py
controller/: controller.py
models/: accounts_model.py  distribution_model.py  transactions_model.py
resources/: resources.qrc  resources_rc.py
resources/i18n/: fr_FR.qm  fr_FR.ts
resources/stylesheets/: drawer.qss  qmenu.qss
server/dashboard/: models.py  serializers.py  urls.py  views.py
server/server/: settings.py  urls.py
skeletons/: MainWindow.py  MainWindow.ui  transaction.py  transaction.ui
utils/: rest_client.py  tools.py  xml_json_converter.py
view/: graphs.py  home.py  menu_view.py
view/graphs_panel/: expenses.py  income.py
view/home_panel/: accounts.py  distribution.py  savings.py  spending.py  transactions.py
view/panels/: graphs.py  home.py
view/resources/: resources.qrc  resources_rc.py
view/skeletons/: MainWindow.py  MainWindow.ui  Options.py  Transaction.ui
view/widgets/: animated_button.py  container.py  custom_window.py  dialog.py  distribution_delegate.py  line_edit_with_icon.py  sliding_stacked_widget.py  title_bar.py
widgets/: calendar_widget.py  callout.py  callout__chartview.py  card.py  category_combobox_delegate.py  container.py  customWindow.py  custom_window.py  distributionDelegate.py  distributionItem.py  distribution_delegate.py  drawer.py  expense_income_widget.py  line_edit_with_icon.py  lined_edit_with_icon.py  slidingStackedWidget.py  status_bar.py  statusbar.py  thumbnail.py  title_bar.py  titlebar.py  transactionDelegate.py  transaction_delegate.py
widgets/balance_widgets/: account_delegate.py  donut_chart_widget.py  donut_chat_widget.py
widgets/saving_widgets/: callout_widget.py  saving_chart_widget.py  saving_dashboard_widget.py
widgets/spending_widgets/: chart_dashboard_widget.py  spending_chart_widget.py
widgets/transaction_widgets/: calendar_widget.py  category_combobox_delegate.py  expense_income_transfer_widget.py  expense_income_widget.py  means_widget.py  transaction_delegate.py
(+65 files in other folders)
