[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "budgetter"
version = "2023.1.0"
authors = [
    { name = "Pierre OLIVIER", email = "pierreolivier.pro@gmail.com" },
]
description = "Finance manager desktop application"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["finance", "budget", "management"]
license = { text = "GPL-3.0" }
classifiers = [
    "Framework :: PySide",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "PySide6",
    "requests",
]

[project.urls]
repository = "https://github.com/opierre/Budgetter"