[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "budgetter"
version = "2024.1.0"
authors = [
    { name = "Pierre OLIVIER", email = "pierreolivier.pro@gmail.com" },
]
description = "Finance manager desktop application"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["finance", "budget", "management"]
license = { text = "GPL-3.0" }
classifiers = [
    "Framework :: PySide",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "PySide6",
    "requests",
]

[project.urls]
repository = "https://github.com/opierre/Budgetter"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "resources",
    "skeletons",
]

# Same as Black.
line-length = 120